hphp/test/zend/good/Zend/tests/bug29944.php
<?php
$a = 1;
switch ($a) {
  case 1:
    function foo($a) {
      return "ok\n";
    }
    echo foo($a);
}
?>